--- a/style.css
+++ b/style.css
@@ -1,53 +1,31 @@
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #0f0f0f;
-  color: #ffffff;
+  background: #111;
+  color: white;
   font-family: monospace;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  min-height: 100vh;
-  overflow-x: hidden;
+  text-align: center;
+  padding: 1rem;
 }
-
 h1 {
-  color: #00ff99;
-  margin-top: 30px;
-  text-shadow: 0 0 5px #00ffcc;
+  color: #f39;
 }
-
-#fileInput {
-  margin: 20px;
-  padding: 10px;
-  background-color: #222;
-  color: #0ff;
-  border: 1px solid #0ff;
-  border-radius: 5px;
+#output {
+  white-space: pre;
+  font-size: 6px;
+  line-height: 6px;
+  display: inline-block;
+}
+.btns {
+  margin: 1rem 0;
+}
+button {
+  margin: 0 5px;
+  padding: 0.5rem 1rem;
+  background: #444;
+  color: white;
+  border: none;
+  border-radius: 8px;
   cursor: pointer;
 }
-
-#fileInput:hover {
-  background-color: #0ff;
-  color: #000;
-}
-
-#output {
-  width: 100%;
-  max-width: 1000px;
-  padding: 20px;
-  white-space: pre-wrap;
-  font-size: 6px;
-  line-height: 5px;
-  word-break: break-word;
-  background-color: #111;
-  box-shadow: 0 0 10px #0ff2;
-  border-radius: 8px;
-  overflow-x: auto;
-  margin-bottom: 50px;
-}
-
-span {
-  font-family: monospace;
+button:hover {
+  background: #666;
 }
